<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/tabbar_wrap"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_tabbar"
	android:elevation="3dp"
	android:outlineProvider="bounds"
	android:clipChildren="false">

	<org.joinmastodon.android.ui.views.TabBar
		android:id="@+id/tabbar"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:paddingHorizontal="8dp">

		<FrameLayout
			android:id="@+id/tab_home"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginEnd="8dp"
			android:background="@drawable/bg_tabbar_tab"
			android:contentDescription="@string/home_timeline">

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_gravity="center"
				android:scaleType="center"
				android:importantForAccessibility="no"
				android:tint="@color/tab_bar_icon"
				android:src="@drawable/ic_fluent_home_24_selector"/>

		</FrameLayout>

		<FrameLayout
			android:id="@+id/tab_search"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginEnd="8dp"
			android:background="@drawable/bg_tabbar_tab"
			android:contentDescription="@string/search_hint">

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_gravity="center"
				android:scaleType="center"
				android:importantForAccessibility="no"
				android:tint="@color/tab_bar_icon"
				android:src="@drawable/ic_fluent_search_24_selector"/>

		</FrameLayout>

		<RelativeLayout
			android:id="@+id/tab_notifications"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginEnd="8dp"
			android:background="@drawable/bg_tabbar_tab"
			android:contentDescription="@string/notifications">

			<ImageView
				android:id="@+id/notifications_icon"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_centerInParent="true"
				android:scaleType="center"
				android:importantForAccessibility="no"
				android:tint="@color/tab_bar_icon"
				android:src="@drawable/ic_fluent_alert_24_selector"/>
			
			<TextView
				android:id="@+id/notifications_badge"
				android:layout_width="wrap_content"
				android:layout_height="16dp"
				android:layout_gravity="center"
				android:layout_alignTop="@id/notifications_icon"
				android:layout_toEndOf="@id/notifications_icon"
				android:layout_marginTop="-4dp"
				android:layout_marginStart="-12dp"
				android:background="@drawable/bg_tabbar_badge"
				android:textColor="?colorM3OnPrimary"
				android:gravity="center"
				android:includeFontPadding="false"
				android:textAppearance="@style/m3_label_small"
				android:minWidth="16dp"
				tools:text="222"/>

		</RelativeLayout>

		<FrameLayout
			android:id="@+id/tab_profile"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/bg_tabbar_tab"
			android:contentDescription="@string/my_profile">
			<ImageView
				android:id="@+id/tab_profile_ava"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_gravity="center"
				android:scaleType="centerCrop"
				android:src="@null"/>
			<ImageView
				android:layout_width="8dp"
				android:layout_height="24dp"
				android:layout_gravity="center"
				android:layout_marginStart="22dp"
				android:importantForAccessibility="no"
				android:scaleType="center"
				android:tint="@color/tab_bar_icon"
				android:src="@drawable/ic_fluent_chevron_up_down_16_regular"/>
		</FrameLayout>
	</org.joinmastodon.android.ui.views.TabBar>

</FrameLayout>